remove test page

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+<h1>Getting Ready Now!</h1>
+
 {% for post in paginator.posts %}
 <div class="article-wrapper">
     <article>
